welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur() && getDirection() == Direction.EST){
  ^SnakeBuggle:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur() && getDirection() == Direction.OUEST){
  ^SnakeBuggle:22: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return(x)
  ^